--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 						<span></span>
 						<span></span>
 						<span></span>
-						<i>Перейти к моему портфолио</i>
+						<i>Перейти к портфолио</i>
 					</a>
 				</div>
 			</div>
