--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@
 						<a href="https://magnat-stroy05.ru/" class="portfolio-content__item-link">
 							<img src="img/portfolio/magnat-stroy05.webp" alt="portfolio">
 							<b>Magnat Stroy05</b>
-							<span>Государственный сайт</span>
+							<span>Корпоративный сайт</span>
 						</a>
 					</div>
 					<div class="portfolio-content__item">
