--- a/index.html
+++ b/index.html
@@ -109,10 +109,10 @@
 				</h2>
 				<div class="portfolio-content">
 					<div class="portfolio-content__item">
-						<a href="http://new.udm-okna.ru/" class="portfolio-content__item-link">
-							<img src="img/portfolio/new-udm-okna-.webp" alt="portfolio">
-							<b>Favorit</b>
-							<span>Корпоративный сайт</span>
+						<a href="https://usmix.ru/" class="portfolio-content__item-link">
+							<img src="img/portfolio/usmix.webp" alt="portfolio">
+							<b>USMIX</b>
+							<span>Каталог с корзиной</span>
 						</a>
 					</div>
 					<div class="portfolio-content__item">
